--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.20",
     "regex": "^0.1.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
