--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "name": "user_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,16 +14,20 @@
     "amqplib": "^0.10.3",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.20",
-    "regex": "^0.1.1"
+    "regex": "^0.1.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1"
   }
 }
